# systemsSoftware

./: CMakeLists.txt
Lab4/: daemon  daemon.c
Lab5/: mainProcess.c  otherProcess.c  pipe.c  pipes2.c  piping.c
lab1/: area_of_circle.c  area_of_circle.h  area_of_rectangle.c  area_of_rectangle.h  area_of_triangle.c  area_of_triangle.h  main.c  roman_numerals.c  roman_numerals.h
lab3/: partA_ls.c  partB_listprocs.c  partC_logfile.c  partH_ls_Expanded.c
